--- a/simple.html
+++ b/simple.html
@@ -194,6 +194,7 @@
 							"route": []
 						}
 					}
+					$('graph').style.visibility = 'hidden';
 					$('sampleRun').style.visibility = 'visible';
 					run();
 				}
